// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarPage should match snapshot (desktop) 1`] = `
<DocumentFragment>
  .c11 {
  color: #fff;
  background-color: #FFC136;
  border: 1px solid #707070;
  padding: 0.75rem;
  font-size: 1rem;
  min-width: none;
  display: inline-block;
  text-align: center;
  margin-top: 16px;
  margin-left: 0;
  margin-right: 0;
}

.c11:hover {
  cursor: pointer;
}

.c12 {
  color: #fff;
  background-color: #FFC136;
  border: 1px solid #707070;
  padding: 0.75rem;
  font-size: 1rem;
  min-width: none;
  display: inline-block;
  text-align: center;
  margin-top: 16px;
  margin-left: 16px;
  margin-right: 16px;
}

.c12:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 100vh;
  max-width: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  border: none;
  width: 50px;
  height: 50px;
  position: relative;
  overflow: hidden;
  background-color: #FFFFFF;
}

.c8:hover {
  cursor: pointer;
}

.c9 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 100;
}

.c5 {
  display: grid;
  grid-template-columns: repeat(7,minmax(0,1fr));
  grid-template-rows: auto;
  max-width: 100%;
  border: 1px solid #707070;
  border-top: none;
  background-color: #fff;
}

.c6 {
  background-color: #EDEFFF;
  border-top: 1px solid #707070;
  border-bottom: none;
}

.c7 {
  width: 50px;
  padding: 0.75rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0.75rem 0;
}

.c3 {
  background-color: transparent;
  border: none;
  font-size: 1.5rem;
}

.c4 {
  width: 200px;
  text-align: center;
  line-height: 100%;
  margin: 0;
}

.c14 {
  background-color: #AFE9FF;
  min-width: 275px;
  height: 500px;
  border: 1px solid #707070;
}

.c15 {
  font-size: 1.5rem;
  margin: 1.25rem 0;
  text-align: center;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  overflow-x: scroll;
}

@media (min-width:768px) {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:768px) {
  .c8 {
    width: 100px;
    height: 100px;
  }
}

@media (min-width:768px) {
  .c1 {
    margin-top: 5rem;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 400px;
    font-size: 2rem;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <button
          class="c3"
          data-testid="moveLeft-main"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-left fa-w-6 "
            data-icon="caret-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M192 127.338v257.324c0 17.818-21.543 26.741-34.142 14.142L29.196 270.142c-7.81-7.81-7.81-20.474 0-28.284l128.662-128.662c12.599-12.6 34.142-3.676 34.142 14.142z"
              fill="currentColor"
            />
          </svg>
        </button>
        <h3
          class="c4"
          data-testid="dateCalendar-main"
        >
          January 2022
        </h3>
        <button
          class="c3"
          data-testid="moveRight-main"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-right fa-w-6 "
            data-icon="caret-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          Mon
        </div>
        <div
          class="c7"
        >
          Tue
        </div>
        <div
          class="c7"
        >
          Wed
        </div>
        <div
          class="c7"
        >
          Thu
        </div>
        <div
          class="c7"
        >
          Fri
        </div>
        <div
          class="c7"
        >
          Sat
        </div>
        <div
          class="c7"
        >
          Sun
        </div>
      </div>
      <div
        class="c5"
      >
        <button
          class="c8"
        />
        <button
          class="c8"
        />
        <button
          class="c8"
        />
        <button
          class="c8"
        />
        <button
          class="c8"
        />
        <button
          class="c8"
        >
          <p
            class="c9"
            data-testid="day"
          >
            1
          </p>
        </button>
      </div>
    </div>
    <div
      class="c10"
    >
      <button
        class="c11"
        data-testid="addh"
      >
        Add habbit
      </button>
      <button
        class="c12"
        data-testid="addl"
      >
        Add label
      </button>
      <button
        class="c11"
        data-testid="labell"
      >
        Label list
      </button>
    </div>
    <div
      class="c2"
    >
      <button
        class="c3"
        data-testid="moveLeft-desktopDay"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-caret-left fa-w-6 "
          data-icon="caret-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M192 127.338v257.324c0 17.818-21.543 26.741-34.142 14.142L29.196 270.142c-7.81-7.81-7.81-20.474 0-28.284l128.662-128.662c12.599-12.6 34.142-3.676 34.142 14.142z"
            fill="currentColor"
          />
        </svg>
      </button>
      <h3
        class="c4"
        data-testid="dateCalendar-desktopDay"
      >
        1.0.12.2021 - 03.02.2022
      </h3>
      <button
        class="c3"
        data-testid="moveRight-desktopDay"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-caret-right fa-w-6 "
          data-icon="caret-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        <h3
          class="c15"
        >
          Saturday
        </h3>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CalendarPage should match snapshot (mobile) 1`] = `
<DocumentFragment>
  .c11 {
  color: #fff;
  background-color: #FFC136;
  border: 1px solid #707070;
  padding: 0.75rem;
  font-size: 1rem;
  min-width: none;
  display: inline-block;
  text-align: center;
  margin-top: 16px;
  margin-left: 0;
  margin-right: 0;
}

.c11:hover {
  cursor: pointer;
}

.c12 {
  color: #fff;
  background-color: #FFC136;
  border: 1px solid #707070;
  padding: 0.75rem;
  font-size: 1rem;
  min-width: none;
  display: inline-block;
  text-align: center;
  margin-top: 16px;
  margin-left: 16px;
  margin-right: 16px;
}

.c12:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 100vh;
  max-width: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  border: none;
  width: 50px;
  height: 50px;
  position: relative;
  overflow: hidden;
  background-color: #FFFFFF;
}

.c8:hover {
  cursor: pointer;
}

.c9 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 100;
}

.c5 {
  display: grid;
  grid-template-columns: repeat(7,minmax(0,1fr));
  grid-template-rows: auto;
  max-width: 100%;
  border: 1px solid #707070;
  border-top: none;
  background-color: #fff;
}

.c6 {
  background-color: #EDEFFF;
  border-top: 1px solid #707070;
  border-bottom: none;
}

.c7 {
  width: 50px;
  padding: 0.75rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0.75rem 0;
}

.c3 {
  background-color: transparent;
  border: none;
  font-size: 1.5rem;
}

.c4 {
  width: 200px;
  text-align: center;
  line-height: 100%;
  margin: 0;
}

@media (min-width:768px) {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:768px) {
  .c8 {
    width: 100px;
    height: 100px;
  }
}

@media (min-width:768px) {
  .c1 {
    margin-top: 5rem;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 400px;
    font-size: 2rem;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <button
          class="c3"
          data-testid="moveLeft-main"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-left fa-w-6 "
            data-icon="caret-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M192 127.338v257.324c0 17.818-21.543 26.741-34.142 14.142L29.196 270.142c-7.81-7.81-7.81-20.474 0-28.284l128.662-128.662c12.599-12.6 34.142-3.676 34.142 14.142z"
              fill="currentColor"
            />
          </svg>
        </button>
        <h3
          class="c4"
          data-testid="dateCalendar-main"
        >
          January 2022
        </h3>
        <button
          class="c3"
          data-testid="moveRight-main"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-right fa-w-6 "
            data-icon="caret-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          Mon
        </div>
        <div
          class="c7"
        >
          Tue
        </div>
        <div
          class="c7"
        >
          Wed
        </div>
        <div
          class="c7"
        >
          Thu
        </div>
        <div
          class="c7"
        >
          Fri
        </div>
        <div
          class="c7"
        >
          Sat
        </div>
        <div
          class="c7"
        >
          Sun
        </div>
      </div>
      <div
        class="c5"
      >
        <button
          class="c8"
        />
        <button
          class="c8"
        />
        <button
          class="c8"
        />
        <button
          class="c8"
        />
        <button
          class="c8"
        />
        <button
          class="c8"
        >
          <p
            class="c9"
            data-testid="day"
          >
            1
          </p>
        </button>
      </div>
    </div>
    <div
      class="c10"
    >
      <button
        class="c11"
        data-testid="addh"
      >
        Add habbit
      </button>
      <button
        class="c12"
        data-testid="addl"
      >
        Add label
      </button>
      <button
        class="c11"
        data-testid="labell"
      >
        Label list
      </button>
    </div>
  </div>
</DocumentFragment>
`;
